# search_engine

./: .gitignore  CMakeLists.txt  README.md  search_engine.lnk
answer/: answers.txt
headerFiles/: converter_JSON.h  inverted_index.h  search_server.h
json/: answers.json  config.json  requests.json
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt  frequency dictionary file.txt
resources/consumable/: file004.txt  file005.txt  frequency dictionary file.txt
sourceFiles/: CMakeLists.txt  converter_JSON.cpp  inverted_index.cpp  main.cpp  search_server.cpp
tests/: CMakeLists.txt  Test.cpp
